Use Kafka Admin API for management of SCRAM-SHA credentials and remove ZooKeeper
Signed-off-by: Jakub Scholz <www@scholzj.com>